--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -9,10 +9,10 @@
     - [ "vars/apachephp.yml", "vars/ws_defaults.yml" ]
   roles:
     - init
-    - php5-cli
     - apache
-    - php5
     - mysql
-    - composer
-    - phpcommon
+    - php5-cli
+    - php5-apache
+    - php-common
+    - postinstall
     - app
