--- a/ansible/roles/init/tasks/main.yml
+++ b/ansible/roles/init/tasks/main.yml
@@ -11,9 +11,10 @@
     - wget
     - python-software-properties
 
-- name: Add ppa Repository
+- name: Add ppa repositories
   sudo: yes
-  apt_repository: repo=ppa:ondrej/{{ php_ppa }}
+  apt_repository: repo={{ item }}
+  with_items: repositories
 
 - name: Update apt
   sudo: yes
@@ -31,6 +32,10 @@
 - name: More Configure the timezone
   sudo: yes
   file: src=/usr/share/zoneinfo/{{timezone}} dest=/etc/localtime state=link force=yes backup=yes
+
+- name: Create after login script
+  sudo: yes
+  template: src=bash_profile.tpl dest=/home/vagrant/.bash_profile
 
 - name: Set the hostname in /etc/hostname
   shell: echo {{ hostname }} > /etc/hostname
