--- a/ansible/roles/apache/tasks/main.yml
+++ b/ansible/roles/apache/tasks/main.yml
@@ -19,14 +19,20 @@
   sudo: yes
   template: src=ports.conf.tpl dest=/etc/apache2/ports.conf
 
-- name: Change default apache2.4 site
-  sudo: yes
-  template: src=vhost24.conf.tpl dest=/etc/apache2/sites-available/000-default.conf
-  notify: restart apache
-  when: apache_version.stdout.find('Apache/2.4.') != -1
+# - name: Change default apache2.4 site
+#   sudo: yes
+#   template: src=vhost24.conf.tpl dest=/etc/apache2/sites-available/000-default.conf
+#   notify: restart apache
+#   when: apache_version.stdout.find('Apache/2.4.') != -1
 
-- name: Change default apache2.2 site
+# - name: Change default apache2.2 site
+#   sudo: yes
+#   template: src=vhost22.conf.tpl dest=/etc/apache2/sites-available/default
+#   notify: restart apache
+#   when: apache_version.stdout.find('Apache/2.2.') != -1
+
+- name: Create symlinks
   sudo: yes
-  template: src=vhost22.conf.tpl dest=/etc/apache2/sites-available/default
+  file: src={{ item.src }} dest={{ item.dest }} state=link
   notify: restart apache
-  when: apache_version.stdout.find('Apache/2.2.') != -1
+  with_items: apacheConfig
